--- a/Solution1/Accounts.Web/Views/Items/Edit.cshtml
+++ b/Solution1/Accounts.Web/Views/Items/Edit.cshtml
@@ -4,9 +4,9 @@
 <hr />
 <style>
     #loading {
-      display: block;
-    margin-left: auto;
-    margin-right: auto 
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 </style>
 @using (Html.BeginForm("Edit", "Items", FormMethod.Post, new { @id = "frmitems" }))
@@ -77,13 +77,15 @@
                 <div class="col-md-12   table-responsive">
                     <table class="table table-bordered table-hover table-condensed  table-responsive table-striped ">
                         <tr>
-                            <td class="col-md-4">Item</td>
-                            <td class="col-md-4">Quantity</td>
+                            <td class="col-md-3">Item</td>
+                            <td class="col-md-3">Quantity</td>
+                            <td class="col-md-3">Unit</td>
                             <td class="col-md-2"></td>
                         </tr>
                         <tr>
-                            <td>@Html.DropDownList("IngridentId", null, htmlAttributes: new { @class = "form-control" })</td>
+                            <td>@Html.DropDownList("IngridentId", ViewBag.IngridentId as SelectList, "Select Item", htmlAttributes: new { @class = "form-control" })</td>
                             <td><input type="text" id="UnitQuantity" class="form-control  txtOrderPrice" maxlength="7" placeholder="Unit Quantity" value="0" /> </td>
+                            <td>@Html.DropDownList("IngridentUnitId", ViewBag.IngridentUnitId as SelectList, "Select Unit", htmlAttributes: new { @class = "form-control" })</td>
                             <td>
                                 <a href="#" class="glyphicon glyphicon-pencil btnadd" id="btnadd" title="Add"></a>
                                 <a href="#" class="glyphicon glyphicon-edit btnupdate" id="btnupdate" title="Edit" style="display:none;"></a>
@@ -101,6 +103,10 @@
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.UnitQuantity)
+                                    </td>
+                                    <td>
+                                        <input type="hidden" class='uid' value="@item.IngridentUnitId" />
+                                        <p class='unitname'>@item.Unit.Name</p>
                                     </td>
                                     <td>
                                         <a class='glyphicon glyphicon-edit edit' style='cursor:pointer;' />
@@ -141,13 +147,16 @@
         var IngridentId = $('#IngridentId').val();
         var IngridentName = $("#IngridentId option:selected").text();
         var UnitQuantity = $('#UnitQuantity').val();
+        var IngridentUnitId = $('#IngridentUnitId').val();
+        var IngridentUnitName = $("#IngridentUnitId option:selected").text();
         $('.dvitemexistmsg').html("");
         newcontent = "";
-
+      //  alert(IngridentUnitName)
         $('#tbodyorder tr').each(function () {
             newcontent += "<tr >";
             newcontent += "<td>" + $(this).find("td").eq(0).html(); + " </td >";
             newcontent += "<td  >" + parseFloat($(this).find("td").eq(1).html()).toFixed(2); + "</td >";
+            newcontent += "<td>" + $(this).find("td").eq(2).html(); + " </td >";
             newcontent += "<td   >";
             newcontent += "<a  class='glyphicon glyphicon-edit edit' style='cursor:pointer;'/>";
             newcontent += "<a  class='glyphicon glyphicon-trash delete' style='cursor:pointer;'/>";
@@ -155,13 +164,16 @@
             newcontent += "</tr >";
         });
 
-
         newcontent += "<tr >";
         newcontent += "<td   >";
         newcontent += "<input type='hidden' class='pid' value=" + IngridentId + " />";
         newcontent += "<p class='productname'>" + IngridentName + "</p>";
         newcontent += "</td >";
         newcontent += "<td  >" + UnitQuantity + " </td >";
+        newcontent += "<td   >";
+        newcontent += "<input type='hidden' class='uid' value=" + IngridentUnitId + " />";
+        newcontent += "<p class='unitname'>" + IngridentUnitName + "</p>";
+        newcontent += "</td >";
         newcontent += "<td   >";
         newcontent += "<a  class='glyphicon glyphicon-edit edit' style='cursor:pointer;'/>";
         newcontent += "<a  class='glyphicon glyphicon-trash delete' style='cursor:pointer;'/>";
@@ -262,11 +274,12 @@
         $('#tbodyorder tr').each(function () {
             var ItemId = $('.hdnitemid').val();
             var IngridentId = $(this).find(".pid").val();
+            var IngridentUnitId = $(this).find(".uid").val();
             var IngridentName = $(this).find(".productname").html();
             var UnitQuantity = $(this).find("td").eq(1).html();
-            OrderDetl.push({ 'ItemId': ItemId, 'IngridentId': IngridentId, 'IngridentName': IngridentName, 'UnitQuantity': UnitQuantity });
+            OrderDetl.push({ 'ItemId': ItemId, 'IngridentId': IngridentId, 'IngridentUnitId': IngridentUnitId, 'IngridentName': IngridentName, 'UnitQuantity': UnitQuantity });
         });
-        //  alert(JSON.stringify(OrderDetl) + '  ' + OrderDetl.length)
+      //  alert(JSON.stringify(OrderDetl) + '  ' + OrderDetl.length)
         if (OrderDetl.length > 0) {
             $('#OrderDetl').val(JSON.stringify(OrderDetl))
         }
