--- a/Solution1/Accounts.Web/Views/PurchaseBills/Create.cshtml
+++ b/Solution1/Accounts.Web/Views/PurchaseBills/Create.cshtml
@@ -3,7 +3,7 @@
 <h2>Create Bill</h2>
 <hr />
 
-@using (Html.BeginForm())
+@using (Html.BeginForm(null, null, FormMethod.Post, new { id = "purchaseBillForm", @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -30,7 +30,7 @@
 
         <div class="col-md-6">
             <div class="form-group">
-                @Html.LabelFor(model => model.BillDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.BillDate, htmlAttributes: new { @class = "control-label col-md-2 required red" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.BillDate, "DateWithPicker")
                     @Html.ValidationMessageFor(model => model.BillDate, "", new { @class = "text-danger" })
@@ -45,28 +45,28 @@
                 </div>
             </div>
         </div>
-     
-        @*<div class="row">
-            <div class="col-md-12">
-                <div class="form-group pull-right">
-                    @Html.LabelFor(model => model.TaxWithExtendedPrice, htmlAttributes: new { @class = "control-label col-md-6" })
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.TaxWithExtendedPrice, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.TaxWithExtendedPrice, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
 
-            <div class="col-md-12">
-                <div class="form-group pull-right">
-                    @Html.LabelFor(model => model.BillTotal, htmlAttributes: new { @class = "control-label col-md-6" })
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.BillTotal, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.BillTotal, "", new { @class = "text-danger" })
+        @*<div class="row">
+                <div class="col-md-12">
+                    <div class="form-group pull-right">
+                        @Html.LabelFor(model => model.TaxWithExtendedPrice, htmlAttributes: new { @class = "control-label col-md-6" })
+                        <div class="col-md-6">
+                            @Html.EditorFor(model => model.TaxWithExtendedPrice, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.TaxWithExtendedPrice, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>*@      
+
+                <div class="col-md-12">
+                    <div class="form-group pull-right">
+                        @Html.LabelFor(model => model.BillTotal, htmlAttributes: new { @class = "control-label col-md-6" })
+                        <div class="col-md-6">
+                            @Html.EditorFor(model => model.BillTotal, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.BillTotal, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>*@
 
 
         <div class="form-group">
@@ -84,3 +84,23 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+<script>
+    $(function () {
+        $("#purchaseBillForm").validate({
+            rules: {
+                BillInvoice: "required",
+                BillDate: "required",
+            },
+            messages: {
+                BillInvoice: "Please enter your BillInvoice",
+                BillDate: "Please enter your BillDate",
+
+            },
+            submitHandler: function (form) {
+                form.submit();
+            }
+        });
+
+    });
+
+</script>
