--- a/Solution1/Accounts.Web/Views/PurchaseBills/Edit.cshtml
+++ b/Solution1/Accounts.Web/Views/PurchaseBills/Edit.cshtml
@@ -102,7 +102,7 @@
 
         <div class="row">
             <div class="col-md-offset-1 col-md-10">
-                @{ Html.RenderAction("Index", "PurchaseItems", new { purchaseBillId = Model.Id });}
+                @{ Html.RenderAction("Index", "PurchaseItems", new { purchaseBillId = Model.Id, puchaseBillDate = Model.BillDate });}
             </div>
         </div>
 
@@ -111,8 +111,6 @@
                 @{ Html.RenderAction("Index", "PurchaseTaxes", new { purchaseBillId = Model.Id });}
             </div>
         </div>
-
-
 
         <div class="row">
             <div class="col-md-12">
