--- a/Solution1/Accounts.Web/Views/PurchaseItems/_Edit.cshtml
+++ b/Solution1/Accounts.Web/Views/PurchaseItems/_Edit.cshtml
@@ -16,6 +16,7 @@
     <div class="modal-body">
         <div class="form-horizontal">
             @Html.HiddenFor(m => m.PurchaseBillId)
+            @Html.HiddenFor(m => m.PurchaseBillDate)
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
             <div class="form-group form-group-sm">
