--- a/Solution1/Accounts.Web/Views/Shared/_Layout.cshtml
+++ b/Solution1/Accounts.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,8 @@
     <link href="~/Content/DataTables/css/jquery.dataTables.css" rel="stylesheet" />
     <link href="~/Content/DataTables/css/buttons.dataTables.css" rel="stylesheet" />
     @Scripts.Render("~/bundles/modernizr")
-    <script src="~/Scripts/jquery-2.1.4.min.js"></script>
+
+    <script src="~/Scripts/jquery-2.2.0.min.js"></script>
     <script src="~/Scripts/jquery-ui-1.11.4.min.js"></script>
 
 </head>
@@ -51,8 +52,8 @@
                             <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("Item Categories", "Index", "ItemCategories")</li>                           
                             <li>@Html.ActionLink("Unit", "Index", "Units")</li>
-                            <li>@Html.ActionLink("Item", "Index", "Items")</li>
-                            <li>@Html.ActionLink("Compound Item", "Index", "Items")</li>
+                            <li>@Html.ActionLink("Unit Relation", "Index", "UnitRelations")</li>
+                            <li>@Html.ActionLink("Item", "Index", "Items")</li>                           
                             <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("Current Stock", "CurrentStock", "IssueItems")</li>
                         </ul>
