--- a/Solution1/Accounts.Web/Views/StoreItems/_storeItems.cshtml
+++ b/Solution1/Accounts.Web/Views/StoreItems/_storeItems.cshtml
@@ -1,120 +1,130 @@
 ﻿@model IEnumerable<Accounts.Web.ViewModel.StoreItemsViewModel>
 
-
-<div class="table">
-    <table class="table table-hover table-striped table-condensed table-bordered">
-        <tr>
-            <th>
-                <label>Bill Inv.</label>
-            </th>
-            <th>
-                <label>Supplier Inv.</label>
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Unit)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Code)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Quantity)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UnitPrice)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ExtendedPrice)
-            </th>
-            <th>
-                <label>F.O.R Unit Price</label>
-            </th>
-            <th>
-                <label>Balance Quantity</label>
-            </th>
-            <th>
-                <p>
-                    @Html.ActionLink("Add", "Create", "StoreItems", new { storeid = ViewBag.StoreId },
+<div class="row">
+    <div class="col-md-12">
+        <div class="table">
+            <table class="table table-hover table-striped table-condensed table-bordered">
+                <tr>
+                    <th>
+                        <label>Date</label>
+                    </th>
+                    <th>
+                        <label>Bill Inv.</label>
+                    </th>
+                    <th>
+                        <label>Supplier Inv.</label>
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Unit)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Code)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Quantity)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.UnitPrice)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ExtendedPrice)
+                    </th>
+                    <th>
+                        <label>F.O.R Unit Price</label>
+                    </th>
+                    <th>
+                        <label>Balance Quantity</label>
+                    </th>
+                    <th>
+                        <p>
+                            @Html.ActionLink("Add", "Create", "StoreItems", new { storeid = ViewBag.StoreId },
                                   new { @class = "btn btn-primary btn-xs", data_modal = "storeitems" })
-                </p>
-            </th>
-        </tr>
+                        </p>
+                    </th>
+                </tr>
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.BillInvoice)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.SupplierInvoice)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Unit.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Code)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Quantity)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UnitPrice)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ExtendedPrice)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FORPrice)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.BalanceQuantity)
-                </td>
-                <td>
-                    <div class="dropdown">
-                        <a href="#" data-toggle="dropdown" class="dropdown-toggle">More <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a>
-                                    @Html.ActionLink("Issue", "Create", "IssueItems",
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ItemAddedDate, "ShortDateFormat")
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.BillInvoice)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.SupplierInvoice)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Unit.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Code)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Quantity)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.UnitPrice)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ExtendedPrice)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FORPrice)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.BalanceQuantity)
+                        </td>
+                        <td>
+                            <div class="dropdown">
+                                <a href="#" data-toggle="dropdown" class="dropdown-toggle">More <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a>
+                                            @Html.ActionLink("Issue", "Create", "IssueItems",
                                   new { storeItemsId = item.Id }, new { @class = "", data_modal = "issueitems" })
-                                </a>
-                            </li>
-                            <li>
-                                <a>
-                                    @Html.ActionLink("Issue List", "Index", "IssueItems",
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a>
+                                            @Html.ActionLink("Issue List", "Index", "IssueItems",
                                   new { storeItemsId = item.Id, itemname = item.Name }, new { @class = "", data_modal = "issueitems" })
-                                </a>
-                            </li>
-                            <li>
-                                @Html.ActionLink("Inward", "Inward", "IssueItems",
+                                        </a>
+                                    </li>
+                                    <li>
+                                        @Html.ActionLink("Inward", "Inward", "IssueItems",
                                      new { storeItemsId = item.Id }, new { @class = "", data_modal = "issueitems" })
-                            </li>
-                        </ul>
-                    </div>
-                </td>
-            </tr>
-        }
-        @*<tr>
-                @{
-                    decimal total = ViewBag.ItemExtentedPriceTotal;
-                    decimal quantitytotal = ViewBag.QuantityTotal;
+                                    </li>
+                                </ul>
+                            </div>
+                        </td>
+                    </tr>
                 }
-                <td></td>
-                <td></td>
-                <td></td>
-                <td><b>Total :-</b> <text>Rs.</text><b> @String.Format("{0:#,###.00}", quantitytotal) </b></td>
-                <td></td>
-                <td><b>Total :-</b> <text>Rs.</text><b> @String.Format("{0:#,###.00}", total) </b></td>
-                <td></td>
+                @*<tr>
+                    @{
+                        decimal total = ViewBag.ItemExtentedPriceTotal;
+                        decimal quantitytotal = ViewBag.QuantityTotal;
+                    }
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td><b>Total :-</b> <text>Rs.</text><b> @String.Format("{0:#,###.00}", quantitytotal) </b></td>
+                    <td></td>
+                    <td><b>Total :-</b> <text>Rs.</text><b> @String.Format("{0:#,###.00}", total) </b></td>
+                    <td></td>
 
-            </tr>*@
+                </tr>*@
 
-    </table>
+            </table>
+        </div>
+    </div>
 </div>
+
 
